Project title will get in faster, fixed margin gap on samsung phones

--- a/src/Pages/Styling/Projects.css
+++ b/src/Pages/Styling/Projects.css
@@ -10,6 +10,7 @@
     color: #fff;
     padding-right: 5%;
     padding-left: 5%;
+    margin: -1px;
 }
 
 .projects__header{
@@ -20,7 +21,7 @@
     margin-top: 5rem;
     opacity: 0;
     transform: translateY(50%);
-    transition: all .5s ease-in;
+    transition: all .2s ease-in;
 }
 
 .projects__header.show{
